Add multiple producers with single consumer.

--- a/EatApplication/Eat/src/main/res/layout/activity_start.xml
+++ b/EatApplication/Eat/src/main/res/layout/activity_start.xml
@@ -20,7 +20,7 @@
                 android:text="Chapter1"
                 android:layout_weight="1"
                 android:onClick="onChapter1"
-                android:enabled="false"/>
+                android:enabled="true"/>
             <Button
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
